# AtelierHaskellAramis

./: README.md  advent7.cabal
slides/: And.hs  Long.hs  OptParse.hs  conf.py  fact.hs  factBroken.hs  presentation.rst
slides/_build/doctrees/: environment.pickle  presentation.doctree  presentation.rst.doctree
slides/_build/slides/: .buildinfo  console.html  genindex.html  objects.inv  presentation.html  presentation.rst.html  search.html  searchindex.js
slides/_build/slides/_sources/: presentation.rst.txt
src/: Main.hs
