name:                advent7
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/guibou/advent7#readme
license:             BSD3
license-file:        LICENSE
author:              Guillaume Bouchard
maintainer:          guillaum.bouchard@gmail.com
copyright:           2015-2016 Guillaume Bouchard
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable advent7
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                      ,containers
                      ,hspec
